# lis2mdl-hal

./: Cargo.toml  README.md
src/: error.rs  i2c_abstraction.rs  lib.rs  lis2mdl.rs  register_map.rs
