[package]
name = "lis2mdl"
version = "0.1.0"
edition = "2021"
authors = ["Niko <niko@niko.lgbt>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async"]
async = ["dep:embedded-hal-async"]
# blocking = ["dep:embedded-hal"]

[dependencies]
# embedded-hal = { version = "1.0.0-rc.1", optional = true }
embedded-hal-async = { version = "1.0.0-rc.1", optional = true }